# tnn-miner

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Building.md  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  benchmark.bat  cmake_install.cmake  cross-windows.sh  description  go-docker.sh  go-windows.sh  register-clang.sh  start.bat  startPool.bat  test.bat
.github/workflows/: build.yml
cmake/: CPM.cmake  astrix-hash.cmake  astrobwtv3.cmake  blake2.cmake  chacha20.cmake  cpu.cmake  hoohash.cmake  nxl-hash.cmake  os.cmake  randomx.cmake  rinhash.cmake  setup.cmake  shai-hive.cmake  spsa.cmake  unset.cmake  verus-hash.cmake  wala-hash.cmake  winring0.cmake  xelis-hash.cmake  yespower.cmake
cmake/hip-crypto/: hip-crypto.cmake
docker/: Dockerfile.base  Dockerfile.ubu  Dockerfile.windows  create-base.sh  register-runner.sh
hugepage/: hp.cpp
include/: ARC4.h  Salsa20.h  Salsa20.inl  Sorter.h  aes.hpp  algo_definitions.h  astroworker.h  base64.hpp  bigint.h  byteswap.h  chacha20.h  chacha20.hpp  compile.h  cpuid_chacha.h  crc32.h  cuda_helpers.cuh  device_sa.cuh  easywsclient.hpp  endian.h  endian.hpp  fastiota.h  fnv1a.h  fnv1a_cuda.cuh  fnv1a_hip.h  gsaca-double-sort.hpp  hex.h  hugepages.h  libcubwt.cuh  lookup.h  msr.hpp  num.h  numa_memory_manager.hpp  numa_optimizer.h  salsa-simd.h  salsa_simd.hpp  sha_detect.h  sleeper.h  sodium_helper.h  spsa.hpp  terminal.h  (+6 more)
include/gsaca-double-sort/: extract.hpp  macros.hpp  phase_types.hpp  radix32.hpp  uint_types.hpp
include/highwayhash/: arch_specific.cc  arch_specific.h  benchmark.cc  c_bindings.cc  c_bindings.h  compiler_specific.h  data_parallel.h  data_parallel_benchmark.cc  data_parallel_test.cc  endianess.h  example.cc  hh_avx2.cc  hh_avx2.h  hh_buffer.h  hh_neon.cc  hh_neon.h  hh_portable.cc  hh_portable.h  hh_sse41.cc  hh_sse41.h  hh_types.h  hh_vsx.cc  hh_vsx.h  highwayhash.h  highwayhash_fuzzer.cc  highwayhash_target.cc  highwayhash_target.h  highwayhash_test.cc  highwayhash_test_avx2.cc  highwayhash_test_neon.cc  highwayhash_test_portable.cc  highwayhash_test_sse41.cc  highwayhash_test_target.cc  highwayhash_test_target.h  highwayhash_test_vsx.cc  iaca.h  instruction_sets.cc  instruction_sets.h  load3.h  nanobenchmark.cc  (+30 more)
include/libkeccak/: common.h  digest.c  libkeccak-legacy.h  libkeccak.h  libkeccak_behex_lower.c  libkeccak_behex_upper.c  libkeccak_cshake_initialise.c  libkeccak_cshake_suffix.c  libkeccak_degeneralise_spec.c  libkeccak_generalised_spec_initialise.c  libkeccak_generalised_sum_fd.c  libkeccak_hmac_copy.c  libkeccak_hmac_create.c  libkeccak_hmac_destroy.c  libkeccak_hmac_digest.c  libkeccak_hmac_duplicate.c  libkeccak_hmac_fast_destroy.c  libkeccak_hmac_fast_digest.c  libkeccak_hmac_fast_free.c  libkeccak_hmac_fast_update.c  libkeccak_hmac_free.c  libkeccak_hmac_initialise.c  libkeccak_hmac_marshal.c  libkeccak_hmac_reset.c  libkeccak_hmac_set_key.c  libkeccak_hmac_unmarshal.c  libkeccak_hmac_update.c  libkeccak_hmac_wipe.c  libkeccak_keccaksum_fd.c  libkeccak_rawshakesum_fd.c  libkeccak_sha3sum_fd.c  libkeccak_shakesum_fd.c  libkeccak_spec_check.c  libkeccak_spec_rawshake.c  libkeccak_spec_sha3.c  libkeccak_state_copy.c  libkeccak_state_create.c  libkeccak_state_destroy.c  libkeccak_state_duplicate.c  libkeccak_state_fast_destroy.c  (+11 more)
include/psais/: psais.hpp
include/stratum/: astrix-stratum.h  btc-stratum.h  kas-stratum.h  rx0-stratum.h  spectre-stratum.h  stratum.h  xelis-stratum.h
lib/ChaCha20-SIMD/: chacha20.c  chacha20_avx2.c  chacha20_avx512.c  chacha20_sse2.c
lib/winring0/: WinRing0x64.def
scripts/: amdgpu-install_6.1.60103-1_all.deb  build.bat  build.ps1  build.sh  build_all.ps1  build_all.sh  build_nvidia.ps1  build_nvidia.sh  docker-regress.sh  prereqs.bat  prereqs.sh  sanity.ps1
share/pkgconfig/: nlohmann_json.pc
src/: easywsclient.cpp  hugepages.h  tnn-common.hpp  version.h
src/astrobwtv3/: 40bit.hpp  MemoryPool.cpp  MergeSorter.h  Sorter.h  archon.c  archon.cpp  archon.h  archon3r3.cpp  archon3r3.h  archon4r0.cpp  archon4r0.h  astro_aarch64.cpp  astro_aarch64.hpp  astrobwtv3.cpp  astrobwtv3.h  binary.h  (+85 more)
src/crypto/astrobwtv3/: .gitignore  CMakeLists.txt  astro_aarch64.cpp  astro_aarch64.hpp  astrobwtv3.cpp  astrobwtv3.h  astrotest.cpp  astrotest.hpp  bench.cpp  common.h  divsufsort.c  divsufsort_private.h  lookupcompute.cpp  lookupcompute.h  simd_util copy.hpp  simd_util.hpp  wolfbranching.cpp
src/crypto/xelis-hash/: Cargo-old.toml  Cargo.toml  chacha20_deprecated.hpp  chacha_avx2.cpp  div.cpp  mydivision1.hpp  xelis-hash-v1.cpp  xelis-hash-v2.cpp  xelis-hash-v2.rs  xelis-hash.hpp  xelis-hash.rs
src/tnn_hip/: CMakeLists.txt  arch_def.h  hello-world.hip  hello.hpp  kHeavyHash.hip.inc
src/tnn_hip/coins/: mine_astrix.hip  miners.hip.hpp
src/tnn_hip/coins/astrix/: mine_astrix.hip  mine_astrix.hip.cpp  mine_astrix.hip.h
src/tnn_hip/coins/nexellia/: mine_nexellia.hip  mine_nexellia.hip.cpp  mine_nexellia.hip.h
src/tnn_hip/coins/waglayla/: mine_waglayla.hip  mine_waglayla.hip.cpp  mine_waglayla.hip.h
src/tnn_hip/core/: devInfo.hip  devInfo.hip.h
src/tnn_hip/crypto/: bitselect.hip.h  blake3-inline.hip.inc  blake3_compact.h  cuda_helper.h  keccak-amd.hip.inc  keccak-nvidia.hip.inc  keccak-tiny.hip.inc  sha3_ver3.hip.inc  skein.hip.inc  skein_port.hip.h  xoshiro256starstar.hip.inc
src/tnn_hip/crypto/astrix/: astrix-cuda.hip  astrix-hash.cu  blake3_compact.h
src/tnn_hip/crypto/astrix-hash/: astrix-hash.hip  astrix-hash.hip.h  astrix_archdef.h  test_hip_astrix.h
src/tnn_hip/crypto/cshake/: common.hip.h  common_ref.h  cshake.hip.h  cshake256.h  cshake256.hip  cshake256_kas.hip  cshake_archdef.h  digest.hip  initialize.hip  initialize_kas.hip.inc  keccak-tiny.h  keccak_ref.h  legacy_ref.h  ref-cshake.cpp  testshake.hip
src/tnn_hip/crypto/nxl-hash/: nxl-hash.hip  nxl-hash.hip.h  nxl_archdef.h  test_hip_nxl.h
src/tnn_hip/crypto/wala-hash/: test_hip_wala.h  wala-hash.hip  wala-hash.hip.h  wala_archdef.h
src/tnn_hip/util/: uint2ops.h
src/tnn_hip/util/hamilton/: hamilton.hip
(+566 files in other folders)
